--- a/views/index.html
+++ b/views/index.html
@@ -21,11 +21,12 @@
     <!-- Put your code in the section tag  -->
     <h3 id="company-name"> Shine Solar </h3>
     <section id="JeremyCode">
-        <table id="user-table">
-            <tr id="table-headings">
-                <th>Name</th> <th>Website</th> <th>Email</th> <th>Address</th>
-            </tr>
-        </table>
+        <div id="nav-bar">
+            <div>Unassigned  <span class="num-orders"></span></div>
+            <div>In progress  <span class="num-orders"></span></div>
+            <div>Complete  <span class="num-orders"></span></div>
+            <div>Requested Revision <span class="num-orders"></span></div>
+        </div>
     </section>
     <!-- This is the template for the modal -->
     <div id="modal">
