--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,24 @@
     <h3 id="company-name"> Shine Solar </h3>
     <section id="JeremyCode">
         <div id="nav-bar">
-            <div>Unassigned  <span class="num-orders"></span></div>
-            <div>In progress  <span class="num-orders"></span></div>
-            <div>Complete  <span class="num-orders"></span></div>
-            <div>Requested Revision <span class="num-orders"></span></div>
+            <div id="tab-id-1" class="tab">Unassigned  <span id="tab-length-1" class="num-orders">0</span></div>
+            <div id="tab-id-2" class="tab">In progress  <span id="tab-length-2" class="num-orders">0</span></div>
+            <div id="tab-id-3" class="tab">Complete  <span id="tab-length-3" class="num-orders">0</span></div>
+            <div id="tab-id-4" class="tab">Requested Revision <span id="tab-length-4" class="num-orders">0</span></div>
+        </div>
+        <div id="order-table">
+            <div id="headings">
+                <div class="table-heading">Order id</div>
+                <div class="table-heading">Lead Name</div>
+                <div class="table-heading">Date Created</div>
+            </div>
+            <div id="table-rows">
+                <div class="table-row">
+                    <div class="order-id">10480</div>
+                    <div>Renee Loman</div>
+                    <div>Friday June 11, 2021</div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- This is the template for the modal -->
