--- a/style/scss/partials/_main.scss
+++ b/style/scss/partials/_main.scss
@@ -42,7 +42,7 @@ $fuchsia-primary: #E03486;
 
 
 body {
-    background-color: $light-one;
+    background-color: $white;
     flex-flow: column nowrap;
     align-items: center;
     height: 100vh;
@@ -53,9 +53,9 @@ body {
     section {
         display: flex;
         width: 100%;
-        height: 100%;
+        height: auto;
         border-radius: 8px;
-        background-color: $white;
+        background-color: rgb(211, 211, 211);
     }
 
 
