deleted unnecessary stuff from table-rows div

--- a/views/index.html
+++ b/views/index.html
@@ -33,13 +33,7 @@
                 <div class="table-heading">Lead Name</div>
                 <div class="table-heading">Date Created</div>
             </div>
-            <div id="table-rows">
-                <div class="table-row">
-                    <div class="order-id">10480</div>
-                    <div>Renee Loman</div>
-                    <div>Friday June 11, 2021</div>
-                </div>
-            </div>
+            <div id="table-rows"></div>
         </div>
     </section>
     <!-- This is the template for the modal -->
