--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -78,7 +78,7 @@ body {
             }
         }
 
-        #table-rows {
+        #rows-container {
             .table-row {
                 padding: 10px;
                 border: 1px;
