--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,8 @@
 
     <!-- Put your code in the section tag  -->
     <h3 id="company-name"> Shine Solar </h3>
+    <!-- In case you need to reset db.json to the initial state -->
+    <button id="resetDatabase">Reset Database</button>
     <section id="JeremyCode">
         <div id="nav-bar">
             <div id="tab-id-1" class="tab">Unassigned  <span id="tab-length-1" class="num-orders">0</span></div>
@@ -33,7 +35,7 @@
                 <div class="table-heading">Lead Name</div>
                 <div class="table-heading">Date Created</div>
             </div>
-            <div id="table-rows"></div>
+            <div id="rows-container"></div>
         </div>
     </section>
     <!-- This is the template for the modal -->
